--- a/miguel-portfolio/src/index.html
+++ b/miguel-portfolio/src/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <meta charset="utf-8">
-  <title>MiguelPortfolio</title>
+  <meta property="og:description" content="Portafolio de mi Miguel Pérez, analista programador">
+  <title>Miguel portafolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="icon" type="image/x-icon" href="./assets/portfolio-svgrepo-com.svg">
 </head>
-<body>
+<body class="bg-gradient-to-r from-black to-blue-900 font-sans ">
   <app-root></app-root>
 </body>
 </html>
